--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,9 @@
     "* [第 3 课, SRK-II公式](./lesson_03_SRKII.html)\n",
     "  * [第 3 课, jupyter笔记本下载](./lesson_03_SRKII.ipynb)\n",
     "* [第 4 课, 一千零一个病人](./lesson_04_1001patients.html)\n",
-    "  * [第 4 课, jupyter笔记本下载](./lesson_04_1001patients.ipynb)\n"
+    "  * [第 4 课, jupyter笔记本下载](./lesson_04_1001patients.ipynb)\n",
+    "* [第 5 课, save 和 load](./lesson_05_pandas.html)\n",
+    "  * [第 5 课, jupyter笔记本下载](./lesson_05_pandas.ipynb)\n"
    ]
   },
   {
