自己写了下SRK/T公式, 累得半死, 是不是之前作业留得太难了?

--- a/lesson_04_1001patients.ipynb
+++ b/lesson_04_1001patients.ipynb
@@ -640,6 +640,7 @@
      "end_time": "2017-10-16T03:55:46.877789Z",
      "start_time": "2017-10-16T03:55:46.861404Z"
     },
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -664,6 +665,32 @@
     "\n",
     "处理5个病人的数据, 和处理一千零一个人的数据并没有区别. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 目录\n",
+    "* [第 0 课, 动机](./lesson_00_motivation.html)\n",
+    "* [第 1 课, CoCalc](./lesson_01_jupyter.html)\n",
+    "* [第 2 课, SRK公式](./lesson_02_SRK.html)\n",
+    "  * [第 2 课, jupyter笔记本下载](./lesson_02_SRK.ipynb)\n",
+    "* [第 3 课, SRK-II公式](./lesson_03_SRKII.html)\n",
+    "  * [第 3 课, jupyter笔记本下载](./lesson_03_SRKII.ipynb)\n",
+    "* [第 4 课, 一千零一个病人](./lesson_04_1001patients.html)\n",
+    "  * [第 4 课, jupyter笔记本下载](./lesson_04_1001patients.ipynb)\n",
+    "* [第 5 课, save 和 load](./lesson_05_pandas.html)\n",
+    "  * [第 5 课, jupyter笔记本下载](./lesson_05_pandas.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
