--- a/lesson_05_pandas.ipynb
+++ b/lesson_05_pandas.ipynb
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:20.621446Z",
-     "start_time": "2017-10-18T19:15:20.614750Z"
+     "end_time": "2017-10-19T06:26:12.579891Z",
+     "start_time": "2017-10-19T06:26:12.570600Z"
     },
     "scrolled": true
    },
@@ -79,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:22.763444Z",
-     "start_time": "2017-10-18T19:15:22.757609Z"
+     "end_time": "2017-10-19T06:26:12.591765Z",
+     "start_time": "2017-10-19T06:26:12.582314Z"
     }
    },
    "outputs": [
@@ -113,11 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:24.472202Z",
-     "start_time": "2017-10-18T19:15:24.456627Z"
+     "end_time": "2017-10-19T06:26:12.862810Z",
+     "start_time": "2017-10-19T06:26:12.594630Z"
     },
     "scrolled": true
    },
@@ -129,7 +129,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-ecdbda71648b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpathname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfilenames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-29-ecdbda71648b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpathname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfilenames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/anaconda3/envs/opencvenv/lib/python3.5/posixpath.py\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(a, *p)\u001b[0m\n\u001b[1;32m     87\u001b[0m                 \u001b[0mpath\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0msep\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTypeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBytesWarning\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m         \u001b[0mgenericpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_arg_types\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'join'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m         \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/envs/opencvenv/lib/python3.5/genericpath.py\u001b[0m in \u001b[0;36m_check_arg_types\u001b[0;34m(funcname, *args)\u001b[0m\n\u001b[1;32m    141\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m             raise TypeError('%s() argument must be str or bytes, not %r' %\n\u001b[0;32m--> 143\u001b[0;31m                             (funcname, s.__class__.__name__)) from None\n\u001b[0m\u001b[1;32m    144\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhasstr\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mhasbytes\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    145\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Can't mix strings and bytes in path components\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: join() argument must be str or bytes, not 'list'"
@@ -158,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:26.389227Z",
-     "start_time": "2017-10-18T19:15:26.382048Z"
+     "end_time": "2017-10-19T06:26:29.419922Z",
+     "start_time": "2017-10-19T06:26:29.412151Z"
     }
    },
    "outputs": [
@@ -220,11 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:29.625068Z",
-     "start_time": "2017-10-18T19:15:28.592555Z"
+     "end_time": "2017-10-19T06:26:31.033018Z",
+     "start_time": "2017-10-19T06:26:31.027113Z"
     }
    },
    "outputs": [
@@ -246,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:29.641006Z",
-     "start_time": "2017-10-18T19:15:29.627939Z"
+     "end_time": "2017-10-19T06:26:31.868136Z",
+     "start_time": "2017-10-19T06:26:31.859639Z"
     },
     "scrolled": true
    },
@@ -291,11 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:31.012251Z",
-     "start_time": "2017-10-18T19:15:31.006216Z"
+     "end_time": "2017-10-19T06:26:33.177034Z",
+     "start_time": "2017-10-19T06:26:33.170499Z"
     }
    },
    "outputs": [
@@ -334,11 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:34.241730Z",
-     "start_time": "2017-10-18T19:15:33.359965Z"
+     "end_time": "2017-10-19T06:26:34.847245Z",
+     "start_time": "2017-10-19T06:26:34.844083Z"
     },
     "collapsed": true
    },
@@ -363,11 +363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:35.595804Z",
-     "start_time": "2017-10-18T19:15:35.533235Z"
+     "end_time": "2017-10-19T06:26:36.398506Z",
+     "start_time": "2017-10-19T06:26:36.371744Z"
     },
     "scrolled": true
    },
@@ -405,11 +405,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:37.203843Z",
-     "start_time": "2017-10-18T19:15:37.196400Z"
+     "end_time": "2017-10-19T06:26:37.452972Z",
+     "start_time": "2017-10-19T06:26:37.445426Z"
     }
    },
    "outputs": [
@@ -449,12 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:39.268364Z",
-     "start_time": "2017-10-18T19:15:39.245765Z"
+     "end_time": "2017-10-19T06:26:39.021720Z",
+     "start_time": "2017-10-19T06:26:39.002789Z"
     },
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -471,11 +472,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:40.442450Z",
-     "start_time": "2017-10-18T19:15:40.421298Z"
+     "end_time": "2017-10-19T06:26:40.021675Z",
+     "start_time": "2017-10-19T06:26:40.003838Z"
     },
     "scrolled": true
    },
@@ -506,17 +507,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:42.198175Z",
-     "start_time": "2017-10-18T19:15:42.150155Z"
+     "end_time": "2017-10-19T06:26:45.896117Z",
+     "start_time": "2017-10-19T06:26:45.859096Z"
     },
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def on_L_change_A(L,A,Lmin,Lmax,deltaA):\n",
+    "    #A=np.asarray(A).copy()\n",
+    "    #L=np.asarray(L).copy()\n",
+    "    assert A.shape()==L.shape()\n",
     "    pickout=np.logical_and(L>Lmin, L<=Lmax)\n",
     "    A[pickout] += deltaA\n",
     "    return A\n",
@@ -548,11 +552,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:43.564498Z",
-     "start_time": "2017-10-18T19:15:43.545544Z"
+     "end_time": "2017-10-19T06:26:48.334072Z",
+     "start_time": "2017-10-19T06:26:48.325031Z"
     },
     "scrolled": true
    },
@@ -589,11 +593,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-18T19:15:45.241390Z",
-     "start_time": "2017-10-18T19:15:45.214131Z"
+     "end_time": "2017-10-19T06:26:50.441042Z",
+     "start_time": "2017-10-19T06:26:50.419459Z"
     },
     "scrolled": true
    },
@@ -697,6 +701,32 @@
    "source": [
     "如果在cocalc或者azure notebooks上, 就可以在文件中点击下载看看了"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 目录\n",
+    "* [第 0 课, 动机](./lesson_00_motivation.html)\n",
+    "* [第 1 课, CoCalc](./lesson_01_jupyter.html)\n",
+    "* [第 2 课, SRK公式](./lesson_02_SRK.html)\n",
+    "  * [第 2 课, jupyter笔记本下载](./lesson_02_SRK.ipynb)\n",
+    "* [第 3 课, SRK-II公式](./lesson_03_SRKII.html)\n",
+    "  * [第 3 课, jupyter笔记本下载](./lesson_03_SRKII.ipynb)\n",
+    "* [第 4 课, 一千零一个病人](./lesson_04_1001patients.html)\n",
+    "  * [第 4 课, jupyter笔记本下载](./lesson_04_1001patients.ipynb)\n",
+    "* [第 5 课, save 和 load](./lesson_05_pandas.html)\n",
+    "  * [第 5 课, jupyter笔记本下载](./lesson_05_pandas.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
