--- a/lesson_03_SRKII.ipynb
+++ b/lesson_03_SRKII.ipynb
@@ -34,7 +34,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-29T15:11:53.366400Z",
      "start_time": "2017-09-29T15:11:53.316325Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -250,7 +251,8 @@
     "ExecuteTime": {
      "end_time": "2017-09-29T15:11:55.082318Z",
      "start_time": "2017-09-29T15:11:54.979257Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -278,6 +280,23 @@
     "\n",
     "    # 此行以上填写\n",
     "    return P_amet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 目录\n",
+    "* [第 0 课, 动机](./lesson_00_motivation.html)\n",
+    "* [第 1 课, CoCalc](./lesson_01_jupyter.html)\n",
+    "* [第 2 课, SRK公式](./lesson_02_SRK.html)\n",
+    "  * [第 2 课, jupyter笔记本下载](./lesson_02_SRK.ipynb)\n",
+    "* [第 3 课, SRK-II公式](./lesson_03_SRKII.html)\n",
+    "  * [第 3 课, jupyter笔记本下载](./lesson_03_SRKII.ipynb)\n",
+    "* [第 4 课, 一千零一个病人](./lesson_04_1001patients.html)\n",
+    "  * [第 4 课, jupyter笔记本下载](./lesson_04_1001patients.ipynb)\n",
+    "* [第 5 课, save 和 load](./lesson_05_pandas.html)\n",
+    "  * [第 5 课, jupyter笔记本下载](./lesson_05_pandas.ipynb)\n"
    ]
   },
   {
