没有人捐赠真实的数据, 只好自己生成了一些, 为第6课机器学习做准备

--- a/IOLfomular.ipynb
+++ b/IOLfomular.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T06:38:12.042322Z",
-     "start_time": "2017-10-19T06:38:12.038300Z"
+     "end_time": "2017-10-19T17:16:19.893011Z",
+     "start_time": "2017-10-19T17:16:19.027344Z"
     },
     "collapsed": true
    },
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:35:58.363113Z",
-     "start_time": "2017-10-19T07:35:58.339258Z"
+     "end_time": "2017-10-19T17:16:19.933446Z",
+     "start_time": "2017-10-19T17:16:19.895232Z"
     }
    },
    "outputs": [],
@@ -42,24 +42,28 @@
     "# 生成标准测试集\n",
     "if __name__ == \"__main__\" :\n",
     "    np.random.seed(0)\n",
-    "IOL_A_Const={\n",
+    "\n",
+    "\n",
+    "def testdata(patinets_num):\n",
+    "    IOL_A_Const={\n",
     "    # 大概需要用个JSON文件存一下, 数据太多了\n",
     "    'AcrySof IQ': 118.7,\n",
     "    'AcrySof IQ Toric': 119.0,\n",
-    "    'PCB00': 118.8\n",
-    "}\n",
-    "\n",
-    "def testdata(patinets_num):\n",
+    "    'PCB00': 118.8,\n",
+    "    'AR40e': 118.4\n",
+    "    }\n",
     "    possibleA=list(IOL_A_Const.values())\n",
     "    A=np.random.choice(possibleA,patinets_num,1).reshape(patinets_num,1)\n",
-    "    K1=np.random.rand(patinets_num,1)*2+40\n",
-    "    K2=np.random.rand(patinets_num,1)*2+40\n",
+    "    K1=np.random.randn(patinets_num,1)*2+41\n",
+    "    K2=np.random.randn(patinets_num,1)*2+41\n",
     "    L=np.random.rand(patinets_num,1)*3+23\n",
+    "    REF=np.random.choice([0,-0.5,-3,-2.75,-3.25],patinets_num,1).reshape(patinets_num,1)\n",
     "    patient_data={\n",
     "        'A': A,\n",
     "        'K1': K1,\n",
     "        'K2': K2,\n",
-    "        'L': L\n",
+    "        'L': L,\n",
+    "        'REF':REF\n",
     "    }\n",
     "    return patient_data\n",
     "    "
@@ -67,24 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:37:43.284035Z",
-     "start_time": "2017-10-19T07:37:43.276414Z"
+     "end_time": "2017-10-19T17:16:19.971429Z",
+     "start_time": "2017-10-19T17:16:19.937168Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 24.8247586 ],\n",
-       "       [ 24.78996622],\n",
-       "       [ 25.35093274],\n",
-       "       [ 24.50007889]])"
+       "array([[ 25.37517511],\n",
+       "       [ 24.58668476],\n",
+       "       [ 24.70413368],\n",
+       "       [ 25.77678991]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,11 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:35:59.496398Z",
-     "start_time": "2017-10-19T07:35:59.490108Z"
+     "end_time": "2017-10-19T17:16:19.981069Z",
+     "start_time": "2017-10-19T17:16:19.974171Z"
     },
     "collapsed": true
    },
@@ -131,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:35:59.869311Z",
-     "start_time": "2017-10-19T07:35:59.857214Z"
+     "end_time": "2017-10-19T17:16:20.009346Z",
+     "start_time": "2017-10-19T17:16:19.983708Z"
     }
    },
    "outputs": [
@@ -143,11 +147,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 17.32520995]]\n",
-      "[[ 18.14056905]\n",
-      " [ 21.30276204]\n",
-      " [ 19.98762072]\n",
-      " [ 24.69195849]]\n"
+      "[[ 16.91780152]]\n",
+      "[[ 19.96006156]\n",
+      " [ 18.45882504]\n",
+      " [ 22.18988729]\n",
+      " [ 22.99350208]]\n"
      ]
     }
    ],
@@ -186,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:36:01.017541Z",
-     "start_time": "2017-10-19T07:36:00.977927Z"
+     "end_time": "2017-10-19T17:16:20.057661Z",
+     "start_time": "2017-10-19T17:16:20.012678Z"
     },
     "collapsed": true
    },
@@ -221,11 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:36:01.658361Z",
-     "start_time": "2017-10-19T07:36:01.650396Z"
+     "end_time": "2017-10-19T17:16:20.068759Z",
+     "start_time": "2017-10-19T17:16:20.060181Z"
     }
    },
    "outputs": [
@@ -233,11 +237,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 21.96653601]]\n",
-      "[[ 19.10168684]\n",
-      " [ 21.79621343]\n",
-      " [ 24.80012004]\n",
-      " [ 18.69449888]]\n"
+      "[[ 18.78693175]]\n",
+      "[[ 16.22363227]\n",
+      " [ 24.0305382 ]\n",
+      " [ 24.61766164]\n",
+      " [ 21.60655324]]\n"
      ]
     }
    ],
@@ -296,12 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:52:04.076378Z",
-     "start_time": "2017-10-19T07:52:04.026455Z"
-    }
+     "end_time": "2017-10-19T17:16:20.145381Z",
+     "start_time": "2017-10-19T17:16:20.071280Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -317,9 +322,6 @@
     "    LC[mLlist]=-3.446+1.716*L[mLlist]-0.0237*(L[mLlist]**2)\n",
     "    \n",
     "    W = -5.41+0.58412*LC + 0.098*K\n",
-    "    print(\"W\")\n",
-    "    print(W)\n",
-    "\n",
     "    H = r-np.sqrt(r**2-(W**2)/4)\n",
     "    Ofst = (0.62467*A-68.747)-3.336\n",
     "    C1 = H + Ofst\n",
@@ -336,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-10-19T07:52:04.486515Z",
-     "start_time": "2017-10-19T07:52:04.472034Z"
+     "end_time": "2017-10-19T17:16:20.158491Z",
+     "start_time": "2017-10-19T17:16:20.148355Z"
     }
    },
    "outputs": [
@@ -349,15 +351,10 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "W\n",
-      "[[ 12.64697535]]\n",
-      "[[ 21.89160901]]\n",
+      "[[ 19.66171332]]\n",
       "2\n",
-      "W\n",
-      "[[ 12.12579722]\n",
-      " [ 12.4315146 ]]\n",
-      "[[ 24.93438823]\n",
-      " [ 23.70374132]]\n"
+      "[[ 16.94901795]\n",
+      " [ 20.39220768]]\n"
      ]
     }
    ],
